src/main/resources/static/css/mainv2_3.css
/* ... */
.sort-icon.reverse:after {
  content: '\f106';
}

form.seamless {
  display: flex;
  min-width: 12rem;
}
form.seamless input {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  flex: 1;
  width: calc(100% - 50px);
}

.modal-tables {
  margin-bottom: 30px;
}

.import-table-tbody {
  display: block;
  height: 175px;
  overflow: auto;
}
.import-table-thead-tbody-tr {
  display: table;
  width: 100%;
  table-layout: fixed;
  white-space: nowrap;
}

.clickable {
  cursor: pointer;
}
.clickable.center-checkbox {
  vertical-align: top;
  margin-left: 5px;
}

#blankCheckbox {
  margin-left: 1rem;
}

.form-check-input {
  position: relative;
}

.pagination {
  float: right;
}
.pagination .page-item.disabled {
  cursor: not-allowed;
}

.page-item.active > .page-link {
  background-color: #c7e7e0;
  border-color: #c7e7e0;
}

.page-link {
  color: #1c6070;
}

.modal-open .modal {
  overflow-y: hidden;
  overflow-x: hidden;
}

.modal.in .modal-dialog {
  -webkit-transform: none;
  transform: none;
}

.modal-backdrop.in {
  filter: alpha(opacity=50);
  opacity: 0.5;
}

.modal-names {
  overflow: hidden;
  text-overflow: ellipsis;
}

.modal-dialog {
  display: flex;
  -ms-flex-align: center;
  align-items: center;
  min-height: calc(100% - (0.5rem * 2));
}
.modal-dialog::before {
  display: block;
  height: calc(100vh - (0.5rem * 10));
  content: "";
}
@media (min-width: 576px) {
  .modal-dialog .modal-dialog {
    min-height: calc(100% - (1.75rem * 2));
  }
  .modal-dialog .modal-dialog::before {
    height: calc(100vh - (1.75rem * 2));
  }
}

.modal-danger {
  color: #721c24;
}
.modal-danger .modal-title {
  color: #721c24;
}
.modal-danger .modal-header {
  color: #f8d7da;
  background-color: #f8d7da;
}
.modal-danger .modal-body {
  background-color: #ffe6e8;
}
.modal-danger .modal-footer {
  border-top-color: #ffe6e8;
}

.form-alert {
  height: 45px;
  padding: 0px 15px;
  margin-bottom: 1rem;
  margin-top: 1rem;
  border-radius: 5px;
  line-height: 30px;
}

.description-alert {
  width: 592px;
  margin-top: 2px;
  height: 35px;
  line-height: 30px;
  padding: 0px 15px;
}

.manage-admins td:first-child {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.check-space {
  margin-right: 10px;
}

label input {
  margin-left: 10px;
}

.check-remove {
  margin-left: auto;
}

.hide-content {
  display: none;
}

#footer-top {
  margin-top: 3rem;
}

.black-bg a:hover, .black-bg a :focus, .black-bg a :active, .dark-teal-bg a:hover, .dark-teal-bg a :focus, .dark-teal-bg a :active {
  color: lightgrey;
}

@media (max-width: 575.98px) {
  .img-fluid {
    width: 210px;
  }
}
.required-asterisk {
  color: red;
}

.alert {
  padding-top: 25px;
}

.manage-groupings td:first-child i {
  flex-basis: 20px;
  margin-right: 8px;
}
.manage-groupings td:first-child span {
  flex: 1;
}
.manage-groupings td:last-child {
  max-width: 220px;
}
.manage-groupings td span.path {
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 40px);
}
.manage-groupings td:last-child {
  max-width: 220px;
}
.manage-groupings tr td {
  padding: 0px;
}

.form-control-sm {
  height: 25px !important;
}

#selectall {
  margin-left: 0;
}

.description-input {
  float: left;
}

#groupingsContainer {
  display: none;
}

.card {
  overflow: hidden;
  margin-top: 1rem;
}
.card.card-tab-content .card-header {
  border-top-left-radius: 0px;
  margin-top: 0px;
}
@media (max-width: 767.98px) {
  .card-title {
    text-align: center;
  }
  .card-title-text {
    text-align: center;
  }
}

.input-group {
  width: 35em;
}

.basis-column {
  width: 3%;
}

.add-margin {
  margin-left: 2px;
}

.inline-block {
  display: inline-block;
}

/**
 * Styling for selected grouping header.
 * Styles the grouping name and 'Return to Groupings'
 * button, so on mobile, the button sits on top of the
 * grouping name, eliminating whitespace.
 */
@media (max-width: 767.98px) {
  #selectedGroupHeader {
    display: table;
    /* The row is now a table */
    /* Centering */
    margin: auto;
    width: 100%;
    padding: 0px;
  }

  #groupNameCol {
    display: table-footer-group;
    /* Makes the grouping name the footer of table */
  }

  #returnToGroup {
    display: table-header-group;
    /* Makes the button the header of table */
  }
}
html {
  position: relative;
  min-height: 100%;
  height: 100%;
}

body {
  font-family: 'Source Sans Pro', 'Helvetica', Arial, sans-serif;
  padding-top: 3.5rem;
  /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
  display: flex;
  /* Creates flexboxes. */
  flex-direction: column;
  /* Makes the body display vertical. */
  min-height: 100vh;
}
body h1 {
  color: #212121;
  font-weight: 700;
}

main, .container {
  flex: 1;
}

.user-icon {
  height: 100px;
  position: relative;
  width: 100px;
}
.user-icon .user-role {
  bottom: 0;
  position: absolute;
  right: -.25rem;
}

.dashboard-item-icon .fa-wrench {
  transform: rotate(-90deg);
}

td.uh-pre {
  -webkit-white-space: pre-wrap;
  -moz-white-space: pre-wrap;
  -o-white-space: pre-wrap;
  -hp-white-space: pre-wrap;
  white-space: pre-wrap;
  white-space: pre;
  white-space: pre-line;
  display: inline-block;
  word-wrap: break-word;
  word-break: break-all;
}

.loader {
  border: 16px solid white;
  border-top: 16px solid black;
  border-radius: 50%;
  width: 150px;
  height: 150px;
  animation: spin 1s linear infinite;
  position: fixed;
  left: 50%;
  top: 50%;
  margin-left: -5.357em;
  margin-top: -5.357em;
}

#overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background: rgba(0, 0, 0, 0.5);
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/*# sourceMappingURL=mainv2_3.css.map */

